Corrected package.json

--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "bin": {
         "module-name": "./bin/worldweatheronline-node-module"
     },
-    "devDependencies": {
-        "grunt": "latest",
-        "grunt-contrib-jshint": "latest",
-        "grunt-contrib-concat": "latest",
-        "grunt-contrib-uglify": "latest",
-        "grunt-contrib-cssmin": "latest",
-        "grunt-contrib-watch": "latest",
-        "grunt-remove-logging": "latest",
-        "grunt-jscs": "latest"
+    "keywords": [
+        "weather",
+        "weather api",
+        "worldweatheronline"
+    ],
+    "main": "weather.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module.git"
+    },
+    "bugs": {
+        "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module/issues"
     },
     "dependencies": {
-        "express": "*",
-        "jade": "*",
-        "mongodb": "*",
         "request": "^2.54.0"
     }
 }
