--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "bugs": {
         "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module/issues"
     },
+    "engines": {
+        "node": ">=0.8.0",
+    },
     "license": "MTI",
     "dependencies": {
         "request": "^2.54.0"
