--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "worldweatheronline-node-module",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Module to get weather with worldweatheronline.",
     "author": "Kiselyov Andrew",
     "contributors": [
@@ -28,8 +28,13 @@
         "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module/issues"
     },
     "engines": {
+        "node": ">= 0.10.0"
     },
-    "license": "MTI",
+    "files": [
+        "README.md",
+        "weather.js"
+    ],
+    "license": "MIT",
     "dependencies": {
         "request": "^2.54.0"
     }
