--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-    "name": "worldweatheronline-node-module",
-    "version": "0.0.2",
-    "description": "Module to get weather with worldweatheronline.",
-    "author": "Kiselyov Andrew",
-    "contributors": [
-        {
-            "name": "Kiselyov Andrew"
-        },
-        {
-            "name": "Miskevich Alexander"
-        }
-    ],
-    "bin": {
-        "module-name": "./bin/worldweatheronline-node-module"
-    },
-    "keywords": [
-        "weather",
-        "weather api",
-        "worldweatheronline"
-    ],
-    "main": "weather.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module.git"
-    },
-    "bugs": {
-        "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module/issues"
-    },
-    "engines": {
-        "node": ">= 0.10.0"
-    },
-    "files": [
-        "README.md",
-        "weather.js"
-    ],
-    "license": "MIT",
-    "dependencies": {
-        "request": "^2.54.0"
-    }
+  "name": "worldweatheronline-node-module",
+  "version": "0.0.3",
+  "description": "Module to get weather with worldweatheronline.",
+  "author": "Kiselyov Andrew",
+  "contributors": [
+    "Kiselyov Andrew",
+    "Miskevich Alexander"
+  ],
+  "bin": {
+    "module-name": "./bin/worldweatheronline-node-module"
+  },
+  "keywords": [
+    "weather",
+    "weather api",
+    "worldweatheronline"
+  ],
+  "main": "weather.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kaban4ik1994/worldweatheronline-node-module/issues"
+  },
+  "engines": {
+    
+  },
+  "files": [
+    "README.md",
+    "weather.js"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "request": "^2.54.0"
+  },
+  "homepage": "https://github.com/kaban4ik1994/worldweatheronline-node-module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
